@@ -2,6 +2,7 @@ package alicanteweb.erp.service;
 
 import alicanteweb.erp.entities.Factura;
 import alicanteweb.erp.entities.FacturaLinea;
+import alicanteweb.erp.util.FinancialMath;
 import alicanteweb.erp.repository.FacturaRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -19,6 +20,7 @@ import java.util.regex.Pattern;
 @Service
 @Slf4j
 @RequiredArgsConstructor
+@org.springframework.transaction.annotation.Transactional(readOnly = true)
 public class FacturaValidacionService {
 
     private static final Pattern CIF_PATTERN = Pattern.compile("^[A-HJ-NP-SUVW][0-9]{7}[0-9A-J]$");
@@ -50,7 +52,7 @@ public class FacturaValidacionService {
     }
 
     private void validarCamposObligatorios(Factura factura, List<String> errores) {
-        if (factura.getNumero() == null || factura.getNumero().trim().isEmpty()) {
+        if (factura.getNumero() == null || factura.getNumero().isBlank()) {
             errores.add("El número de factura es obligatorio");
         }
 
@@ -58,13 +60,13 @@ public class FacturaValidacionService {
             errores.add("La fecha de expedición es obligatoria");
         }
 
-        if (factura.getSerie() == null || factura.getSerie().trim().isEmpty()) {
+        if (factura.getSerie() == null || factura.getSerie().isBlank()) {
             errores.add("La serie de factura es obligatoria");
         } else if (!factura.getSerie().matches("^[A-Z0-9_-]{1,20}$")) {
             errores.add("La serie contiene caracteres no válidos");
         }
 
-        if (factura.getTipoFactura() == null || factura.getTipoFactura().trim().isEmpty()) {
+        if (factura.getTipoFactura() == null || factura.getTipoFactura().isBlank()) {
             errores.add("El tipo de factura es obligatorio");
         }
     }
@@ -76,13 +78,13 @@ public class FacturaValidacionService {
         }
 
         String cif = factura.getCliente().getCif();
-        if (cif == null || cif.trim().isEmpty()) {
+        if (cif == null || cif.isBlank()) {
             errores.add("El cliente debe tener CIF/NIF");
         } else if (!validarCifNif(cif)) {
             errores.add("El CIF/NIF del cliente no es válido: " + cif);
         }
 
-        if (factura.getCliente().getNombre() == null || factura.getCliente().getNombre().trim().isEmpty()) {
+        if (factura.getCliente().getNombre() == null || factura.getCliente().getNombre().isBlank()) {
             errores.add("El cliente debe tener nombre/razón social");
         }
     }
@@ -117,7 +119,7 @@ public class FacturaValidacionService {
 
             if (linea.getIva() != null) {
                 BigDecimal iva = linea.getIva();
-                if (iva.compareTo(BigDecimal.ZERO) < 0 || iva.compareTo(new BigDecimal("100")) > 0) {
+                if (iva.compareTo(BigDecimal.ZERO) < 0 || iva.compareTo(FinancialMath.CIEN) > 0) {
                     errores.add(prefijo + "El IVA debe estar entre 0 y 100");
                 }
             }
@@ -179,7 +181,7 @@ public class FacturaValidacionService {
         String tipo = factura.getTipoFactura();
 
         if ("RECTIFICATIVA".equals(tipo)) {
-            if (factura.getFacturaRectificadaNumero() == null || factura.getFacturaRectificadaNumero().trim().isEmpty()) {
+            if (factura.getFacturaRectificadaNumero() == null || factura.getFacturaRectificadaNumero().isBlank()) {
                 errores.add("Factura rectificativa: Debe indicar el número de factura original");
             }
 
@@ -187,7 +189,7 @@ public class FacturaValidacionService {
                 errores.add("Factura rectificativa: Debe indicar la fecha de factura original");
             }
 
-            if (factura.getMotivoRectificacion() == null || factura.getMotivoRectificacion().trim().isEmpty()) {
+            if (factura.getMotivoRectificacion() == null || factura.getMotivoRectificacion().isBlank()) {
                 errores.add("Factura rectificativa: Debe indicar el motivo de rectificación");
             }
         }
@@ -208,7 +210,7 @@ public class FacturaValidacionService {
     }
 
     public boolean validarCifNif(String documento) {
-        if (documento == null || documento.trim().isEmpty()) {
+        if (documento == null || documento.isBlank()) {
             return false;
         }
 
