@@ -137,7 +137,7 @@ public class RolService {
      * Buscar roles por texto
      */
     public List<Rol> buscar(String texto) {
-        if (texto == null || texto.trim().isEmpty()) {
+        if (texto == null || texto.isBlank()) {
             return listarTodos();
         }
         return rolRepository.buscar(texto.trim());
@@ -155,14 +155,6 @@ public class RolService {
         if (Boolean.TRUE.equals(rol.getEsSistema())) {
             throw new IllegalArgumentException("No se pueden eliminar roles del sistema");
         }
-
-        // Verificar que no haya usuarios con este rol
-        // TODO: La base de datos actual no soporta esta relación
-        /*
-        if (!rol.getUsuarios().isEmpty()) {
-            throw new IllegalArgumentException("No se puede eliminar el rol porque tiene usuarios asignados");
-        }
-        */
 
         rol.setActivo(false);
         rolRepository.save(rol);
@@ -244,49 +236,6 @@ public class RolService {
      */
     public long contarActivos() {
         return rolRepository.countByActivoTrue();
-    }
-
-    // ==========================================
-    // Métodos alias para tests
-    // ==========================================
-
-    public Rol save(Rol rol) {
-        if (rol.getId() == null) {
-            return crearRol(rol);
-        }
-        return actualizarRol(rol);
-    }
-
-    public Optional<Rol> findById(Long id) {
-        return buscarPorId(id);
-    }
-
-    public List<Rol> findAll() {
-        return listarTodos();
-    }
-
-    public Optional<Rol> findByNombre(String nombre) {
-        return buscarPorNombre(nombre);
-    }
-
-    public List<Rol> findActivos() {
-        return listarActivos();
-    }
-
-    public Rol update(Rol rol) {
-        return actualizarRol(rol);
-    }
-
-    public void desactivar(Long id) {
-        eliminarRol(id);
-    }
-
-    public void activar(Long id) {
-        activarRol(id);
-    }
-
-    public void deleteById(Long id) {
-        eliminarRol(id);
     }
 }
 
