@@ -34,10 +34,14 @@ public class VehiculoService {
         return repository.findByActivo(activo);
     }
 
+    public List<Vehiculo> buscar(String q) {
+        return repository.buscar(q);
+    }
+
     @Transactional
     public Vehiculo save(Vehiculo vehiculo) {
         if (vehiculo == null) throw new IllegalArgumentException("Vehículo nulo");
-        if (vehiculo.getMatricula() == null || vehiculo.getMatricula().trim().isEmpty()) {
+        if (vehiculo.getMatricula() == null || vehiculo.getMatricula().isBlank()) {
             throw new IllegalArgumentException("La matrícula es obligatoria");
         }
         var opt = repository.findByMatricula(vehiculo.getMatricula().trim());
